--- a/reusable.css
+++ b/reusable.css
@@ -1,3 +1,9 @@
+/* 
+classnames summary:
+- underline-hov-transfrom-l-to-r
+- custom-scrollbar
+*/
+
 .underline-hov-transfrom-l-to-r {
   position: relative;
   text-decoration: none;
@@ -14,4 +20,19 @@
 .underline-hov-transfrom-l-to-r:hover:after {
   transform: scaleX(1);
   transform-origin: 0 50%;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  opacity: 0;
+  width: 10px;
+}
+
+.custom-scrollbar:hover::-webkit-scrollbar {
+  width: 10px;
+}
+
+.custom-scrollbar:hover::-webkit-scrollbar-thumb {
+  border: 2px solid transparent;
+  border-radius: 9999px;
+  box-shadow: inset 0 0 16px 16px #64646436;
 }
